# AI-Desktop-Window-Manager

./: .editorconfig  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
aidwm/: __main__.py  cli.py  config.py  engine.py  events.py  ipc.py  registry.py  zones.py
aidwm/backends/: __init__.py  base.py  x11.py
aidwm/planner/: __init__.py  base.py  heuristic.py  zone.py
config/: default.toml
tests/: test_config.py  test_engine_pinning.py  test_heuristic_planner.py  test_registry.py  test_zone_planner.py  test_zones.py
