[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aidwm"
version = "0.1.0"
description = "AI-powered hybrid tiling/stacking window manager for Linux"
requires-python = ">=3.11"
dependencies = [
    "python-xlib>=0.33",
    "ewmh>=0.1.6",
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
eye-tracking = [
    "opencv-python>=4.9",
    "mediapipe>=0.10",
]

[project.scripts]
aidwm = "aidwm.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidwm*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aidwm --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["aidwm"]
